--- a/css/style.css
+++ b/css/style.css
@@ -1675,6 +1675,7 @@ iframe {
     overflow: hidden;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     transition: .3s;
+    margin: 20px 0;
 }
 
 .ca-location-icbox-text {
